--- a/style.user.css
+++ b/style.user.css
@@ -43,7 +43,9 @@ SVTFPN "No" <<<EOT
 }
 
 @-moz-document domain("youtube.com") {
-/*:: Thinner/Darker Scroll bar ::*/
+/*::::::::::::::::::::::::::::::::::::::::::::::::::::::::: Globals :::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
+
+/*::: Thinner/Darker Scroll bar :::*/
 ::-webkit-scrollbar-corner {
   background-color: #333 !important;
 }
@@ -64,9 +66,9 @@ SVTFPN "No" <<<EOT
 }
 
 @-moz-document regexp("https:\/\/www.youtube.com\/watch.*") {
-/*::: STRETCH VIDEO TO FILL PLAYER :::*/
+/*::::::::::::::::::::::::::::::::::::::::::::::::::::::::: Video Page :::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
+
 /*[[SVTFP]]*/
 
-/*::: Max Video Player Width 138006 :::*/
 /*[[VMaxWidth]]*/
 }
