--- a/optionals.css
+++ b/optionals.css
@@ -1,37 +1,40 @@
-/*::: Max Video Player Width 138006 :::*/
+/*:::::::::::::::::::::::::::::::::::::::::::::::: Max Video Player Width 138006 ::::::::::::::::::::::::::::::::::::::::::::::::*/
 
-/* Full height player */
+/*::: Max Video Player Width :::*/
+/*::: Full height player :::*/
 ytd-app[is-watch-page] ytd-watch[theater] #player {
   min-height: 100vh !important;
   max-height: 100vh !important;
 }
 
-/* Hide top bar */
+/*::: Hide top bar :::*/
 ytd-app[is-watch-page] #masthead-container {
   opacity: 0 !important;
 
   transition: opacity .2s ease-in-out;
 }
 
-/* Show on hover */
+/*::: Show top bar on hover :::*/
 ytd-app[is-watch-page] #masthead-container:hover {
   opacity: 1 !important;
 }
 
-/* Remove top margin */
+/*::: Remove top margin :::*/
 ytd-app[is-watch-page] #page-manager {
   margin-top: 0 !important;
 }
 
-/* Hide feedback and restore classic buttons */
+/*::: Hide feedback and restore classic buttons :::*/
 ytd-app[is-watch-page] #extra-buttons {
   display: none !important;
 }
 
-/* Fix toast interfering with controls */
+/*::: Fix toast interfering with controls :::*/
 ytd-app[is-watch-page] #toast:not(.paper-toast-open) {
   pointer-events: none;
 }
+
+/*:::::::::::::::::::::::::::::::::::::::::::::::: STRETCH VIDEO TO FILL PLAYER ::::::::::::::::::::::::::::::::::::::::::::::::*/
 
 /*::: STRETCH VIDEO TO FILL PLAYER :::*/
 video {
