--- a/optionals.css
+++ b/optionals.css
@@ -44,3 +44,74 @@ video {
 
   object-fit: fill !important;
 }
+
+/*:::::::::::::::::::::::::::::::::::::::::::::::: FADE WATCHED VIDEOS 144084  ::::::::::::::::::::::::::::::::::::::::::::::::*/
+
+/*::: FADE WATCHED VIDEOS :::*/
+@font-face {
+  font-family: "FontAwesome";
+  font-weight: normal;
+  font-style: normal;
+
+  src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot?v=4.7.0");
+  src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
+}
+
+.ytd-browse yt-formatted-string.ytd-thumbnail-overlay-playback-status-renderer {
+  display: none;
+}
+
+.ytd-browse ytd-thumbnail-overlay-resume-playback-renderer {
+  width: 100%;
+  height: 100%;
+
+  background-color: rgb(240, 240, 240);
+
+  opacity: .85;
+
+  transition: opacity 200ms ease-out;
+}
+
+html[dark=true] .ytd-browse ytd-thumbnail-overlay-resume-playback-renderer {
+  background-color: rgb(3, 3, 3);
+
+  opacity: .95;
+}
+
+.ytd-browse #progress.ytd-thumbnail-overlay-resume-playback-renderer {
+  height: 100%;
+
+  background-color: rgb(255, 255, 255);
+}
+
+html[dark=true] .ytd-browse #progress.ytd-thumbnail-overlay-resume-playback-renderer {
+  background-color: rgb(17, 17, 17);
+}
+
+.ytd-browse ytd-thumbnail-overlay-resume-playback-renderer div#progress:after {
+  visibility: visible;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  margin-top: -14px;
+  margin-left: -14px;
+
+  font-family: "FontAwesome";
+  font-size: 32px;
+
+  color: #999;
+
+  opacity: .7;
+
+  content: "\f00c";
+}
+
+html[dark=true] .ytd-browse div#progress:after {
+  color: #fff;
+}
+
+.ytd-browse ytd-thumbnail-overlay-resume-playback-renderer:hover {
+  opacity: 0 !important;
+}
