--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 /* ||                                                                                  || */
 /* ||* Created     : 09 / 11 / 2017                                                    || */
 /* ||                                                                                  || */
-/* ||* Updated     : 06 / 11 / 2018                                                    || */
+/* ||* Updated     : 07 / 23 / 2018                                                    || */
 /* ||                                                                                  || */
-/* ||* Version     : 1.0.2                                                             || */
+/* ||* Version     : 1.0.3                                                             || */
 /* ||                                                                                  || */
 /* ||* Copyright   : 2017-2018                                                         || */
 /* ||                                                                                  || */
@@ -20,14 +20,19 @@
 /*::::::::::::::::::::::::::::::::::::::::::::::::::::::::: Globals :::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
 
 /*::: Thinner/Darker Scroll bar :::*/
-::-webkit-scrollbar-corner {
-  background-color: #333 !important;
+::-webkit-scrollbar {
+  width: 4px;
 }
 
-::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
-  background-color: #333 !important;
+::-webkit-scrollbar-button {
+  display: none;
+  border-radius: 0;
+  height: 13px;
+  background-color: #333;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #333;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -36,6 +41,9 @@
   background: #555 !important;
 }
 
+::-webkit-scrollbar-corner {
+  background-color: #333 !important;
+}
 /*[[WatchedBadge]]*/
 }
 
@@ -45,4 +53,6 @@
 /*[[SVTFP]]*/
 
 /*[[VMaxWidth]]*/
+
+/*[[RSNB]]*/
 }
