--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 /* ||                                                                                  || */
 /* ||* Created     : 09 / 11 / 2017                                                    || */
 /* ||                                                                                  || */
-/* ||* Updated     : 07 / 26 / 2018                                                    || */
+/* ||* Updated     : 07 / 29 / 2018                                                    || */
 /* ||                                                                                  || */
-/* ||* Version     : 1.0.4                                                             || */
+/* ||* Version     : 1.0.5                                                             || */
 /* ||                                                                                  || */
 /* ||* Copyright   : 2017-2018                                                         || */
 /* ||                                                                                  || */
@@ -21,23 +21,23 @@
 
 /*::: Thinner/Darker Scroll bar :::*/
 ::-webkit-scrollbar {
-  width: 4px;
+  width: 4px !important;
 }
 
 ::-webkit-scrollbar-button {
-  display: none;
-  border-radius: 0;
-  height: 13px;
-  background-color: #333;
+  display: none !important;
+  border-radius: 0 !important;
+  height: 13px !important;
+  background-color: #333 !important;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #333;
+  background-color: #333 !important;
 }
 
 ::-webkit-scrollbar-thumb {
-  -webkit-border-radius: 2px;
-  border-radius: 2px;
+  -webkit-border-radius: 2px !important;
+  border-radius: 2px !important;
   background: #555 !important;
 }
 
