--- a/optionals/fade-watched.css
+++ b/optionals/fade-watched.css
@@ -1,5 +1,5 @@
 /* fade-watched */
-/*::: FADE WATCHED VIDEOS 144084 :::*/
+/*::: FADE WATCHED VIDEOS :::*/
 @font-face {
   font-family: "FontAwesome";
   font-weight: normal;
