--- a/optionals/max-width.css
+++ b/optionals/max-width.css
@@ -1,5 +1,5 @@
 /* max-width */
-/*::: Max Video Player Width 138006 :::*/
+/*::: Max Video Player Width :::*/
 /*::: Full height player :::*/
 ytd-app[is-watch-page] ytd-watch[theater] #player,
 ytd-app[is-watch-page] ytd-watch-flexy[theater] #player-theater-container {
