--- a/optionals/fade-watched.css
+++ b/optionals/fade-watched.css
@@ -4,6 +4,7 @@
   font-family: "FontAwesome";
   font-weight: normal;
   font-style: normal;
+
   src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot?v=4.7.0");
   src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
 }
@@ -12,7 +13,7 @@
   display: none;
 }
 
-.ytd-browse ytd-thumbnail-overlay-resume-playback-renderer {
+ytd-thumbnail-overlay-resume-playback-renderer {
   width: 100%;
   height: 100%;
   background-color: #f0f0f0;
@@ -20,36 +21,53 @@
   transition: opacity 200ms ease-out;
 }
 
-.ytd-browse ytd-thumbnail-overlay-resume-playback-renderer div#progress:after {
-  visibility: visible;
+ytd-thumbnail-overlay-resume-playback-renderer:before {
+  display: flex;
   position: absolute;
-  top: 15%;
-  left: 10%;
-  margin-top: -14px;
-  margin-left: -14px;
+  top: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
   font-family: "FontAwesome";
   font-size: 32px;
   color: #999;
   opacity: .7;
+  transition: .1s ease;
   content: url("https://raw.githubusercontent.com/StylusThemes/YouTube-Theater/master/images/watched.png");
+
+  align-items: center;
+  justify-content: center;
 }
 
-.ytd-browse ytd-thumbnail-overlay-resume-playback-renderer:hover {
-  opacity: 0 !important;
+ytd-compact-video-renderer:hover #overlays,
+ytd-video-renderer:hover #overlays,
+ytd-grid-video-renderer:hover #overlays,
+ytd-playlist-video-renderer:hover #overlays {
+  opacity: 0;
 }
 
-.ytd-browse #progress.ytd-thumbnail-overlay-resume-playback-renderer {
+ytd-thumbnail #overlays {
   height: 100%;
-  background-color: #ffffff;
+  transition: .2s ease;
 }
 
-html[dark=true] .ytd-browse ytd-thumbnail-overlay-resume-playback-renderer {
+ytd-thumbnail-overlay-resume-playback-renderer {
+  opacity: 1;
+}
+
+#progress.ytd-thumbnail-overlay-resume-playback-renderer {
+  height: 100%;
+  background-color: #fff;
+  opacity: .5;
+}
+
+html[dark=true] ytd-thumbnail-overlay-resume-playback-renderer {
   background-color: #030303;
-  opacity: .95;
+  opacity: .85;
 }
 
-html[dark=true] .ytd-browse #progress.ytd-thumbnail-overlay-resume-playback-renderer {
-  background-color: #111111;
+html[dark=true] #progress.ytd-thumbnail-overlay-resume-playback-renderer {
+  background-color: #111;
 }
 
 html[dark=true] .ytd-browse div#progress:after {
