Youtube Theater 1.2.2 release
## v1.2.2 ... (02 JULY 19)

### Additions:
`+`Added an option to stretch the main video container on youtube to be a bit wider. `Especially on a 2K monitor the default youtube container is ridiculously narrow, but even on 1080p using this means at least one more column of videos visible.`

--- a/css/theme/theme.css
+++ b/css/theme/theme.css
@@ -1,3 +1,8 @@
+#copyright div::after {
+  white-space: pre;
+  content: "\A Youtube Theater - Version 1.2.2";
+}
+
 ::-webkit-scrollbar {
   width: 4px !important;
 }
