Youtube Theater 1.2.3 release
## v1.2.3 ... (01 AUGUST 19)

### Fixes:
`+` Fixed Stretch video to fill player, as some videos end up being stretched too far and cutting off a bit of the sides of the videos.

--- a/css/optionals/stretch-video.css
+++ b/css/optionals/stretch-video.css
@@ -2,6 +2,7 @@
 video {
   position: static !important;
   width: 100% !important;
+  transform: scaleX(1) !important;
 
   object-fit: fill !important;
 }
